--- a/popup/popup.css
+++ b/popup/popup.css
@@ -15,26 +15,19 @@ button {
 label {
     user-select: none;
 }
-/* width */
 ::-webkit-scrollbar {
     width: 5px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
+}
+::-webkit-scrollbar-track {
     background: #f1f1f1;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+}
+::-webkit-scrollbar-thumb:hover {
     background: #7DB139;
-  }
+}
 .popup {
     display: flex;
     flex-direction: column;
@@ -145,6 +138,46 @@ label {
     color: #000000;
     cursor: pointer;
     user-select: none;
+}
+.popup .list .addition {
+    display: flex;
+    justify-content: space-between;
+    height: 0px;
+    padding-left: 5px;
+    margin: 0;
+    transition: 0.5s ease-in-out;
+    overflow: hidden;
+}
+.popup .list .addition.active {
+    height: 24px;
+    margin: 8px 0;
+}
+.popup .list .addition .input {
+    width: 430px;
+    height: 100%;
+    background: #223E53;
+    outline: none;
+    font-size: 12px;
+    line-height: 14px;
+    color: #BDD5DF;
+    border: none;
+    padding: 4px 12px;
+}
+.popup .list .addition .input::placeholder {
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 14px;
+    color: #7e5e5e;
+}
+.popup .list .addition-btn {
+    width: 82px;
+    height: 100%;
+    background: #B2B6B4;
+    border-radius: 18px;
+    cursor: pointer;
+}
+.popup .list .addition-btn:hover {
+    background: #7DB139;
 }
 .popup .table {
     width: 100%;
